fix(previews): position modal at maximum z-index

--- a/packages/gatsby-plugin-prismic-previews/src/styles.css
+++ b/packages/gatsby-plugin-prismic-previews/src/styles.css
@@ -502,13 +502,3 @@ Add the correct display in Chrome and Safari.
 :root {
   --reach-dialog: 1;
 }
-
-[data-reach-dialog-overlay] {
-  background: hsla(0, 0%, 0%, 0.6);
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  overflow: auto;
-}
